syntax = "proto3";
package helloworld;

option go_package="github.com/hitzhangjie/codemaster/tls/proto";

service HelloService {
    rpc Hello(HelloRequest) returns(HelloResponse);
    
}

message HelloRequest {
    string msg = 1;
}

message HelloResponse {
    int32 err_code = 1; 
    string err_msg = 2;
}


